--- a/Bank/pom.xml
+++ b/Bank/pom.xml
@@ -47,23 +47,24 @@
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
-		
+
 		<dependency>
-               <groupId>org.springframework.ws</groupId>
-               <artifactId>spring-ws-core</artifactId>
-        </dependency>
-        
-        <dependency>
-		    <groupId>com.sun.xml.ws</groupId>
-		    <artifactId>jaxws-rt</artifactId>
-		    <version>2.2.10</version>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
 		</dependency>
-		
-		
+
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>2.2.10</version>
+		</dependency>
+
+
 
 	</dependencies>
 
 	<build>
+		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
@@ -105,6 +106,7 @@
 				</plugin>
 
 			</plugins>
+		</pluginManagement>
 	</build>
 
 	<packaging>war</packaging>
