--- a/Company/pom.xml
+++ b/Company/pom.xml
@@ -24,6 +24,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -88,6 +94,7 @@
 	</dependencies>
 
 	<build>
+		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
@@ -127,8 +134,8 @@
 					</configuration>
 
 				</plugin>
-
 			</plugins>
+		</pluginManagement>
 	</build>
 
 
