--- a/Company/src/main/resources/application.properties
+++ b/Company/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Spring DataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/xmldb?useSSL=false&createDatabaseIfNotExist=true
+server.contextPath=/Firma
 spring.datasource.username = root
 spring.datasource.password = 1100rh18
 #korisno ako je konekcija dugo u idle stanju
