--- a/Company/pom.xml
+++ b/Company/pom.xml
@@ -91,6 +91,11 @@
 			<version>2.2.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
