--- a/Bank/pom.xml
+++ b/Bank/pom.xml
@@ -60,7 +60,7 @@
 	</dependencies>
 
 	<build>
-		
+		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
@@ -101,7 +101,7 @@
 				</plugin>
 
 			</plugins>
-		
+		</pluginManagement>
 	</build>
 
 	<packaging>war</packaging>
