--- a/CentralBank/pom.xml
+++ b/CentralBank/pom.xml
@@ -58,7 +58,7 @@
 	</dependencies>
 
 	<build>
-		
+		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
@@ -98,7 +98,7 @@
 						</configuration>
 					</plugin>
 			</plugins>
-			
+		</pluginManagement>
 	</build>
 
 </project>
