--- a/Company/pom.xml
+++ b/Company/pom.xml
@@ -42,27 +42,16 @@
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
-			<version>${resteasy.version}</version>
+			<artifactId>resteasy-jaxb-provider</artifactId>
+			<version>3.0.4.Final</version>
 		</dependency>
-		<!-- Servlet pluggability support -->
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-servlet-initializer</artifactId>
-			<version>${resteasy.version}</version>
-		</dependency>
-		<!-- JSON/POJO support -->
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson2-provider</artifactId>
-			<version>${resteasy.version}</version>
-		</dependency>
-		<!-- REST Client support -->
+
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
-			<version>${resteasy.version}</version>
+			<version>3.0.4.Final</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,19 +68,12 @@
 			<artifactId>spring-ws-core</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>jaxws-rt</artifactId>
-			<version>2.2.10</version>
-		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-xml</artifactId>
-		</dependency>
+
 
 	</dependencies>
 
+	
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -135,7 +117,7 @@
 				</plugin>
 
 			</plugins>
-			</pluginManagement>
+		</pluginManagement>
 	</build>
 
 
