--- a/CentralBank/src/main/resources/application.properties
+++ b/CentralBank/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 #Spring DataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/xmldb?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = divovicgoran
 #korisno ako je konekcija dugo u idle stanju
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
