--- a/Bank/pom.xml
+++ b/Bank/pom.xml
@@ -47,15 +47,24 @@
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
-		
+
 		<dependency>
-               <groupId>org.springframework.ws</groupId>
-               <artifactId>spring-ws-core</artifactId>
-        </dependency>
-        
-   
-		
-		
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+
 
 	</dependencies>
 
