--- a/CentralBank/pom.xml
+++ b/CentralBank/pom.xml
@@ -48,13 +48,23 @@
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
-		
+
 		<dependency>
-               <groupId>org.springframework.ws</groupId>
-               <artifactId>spring-ws-core</artifactId>
-        </dependency>
-        
-       
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -81,22 +91,22 @@
 
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
-						<artifactId>jaxb2-maven-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>xjc</id>
-								<goals>
-									<goal>xjc</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<schemaDirectory>${project.basedir}/src/main/xsd/</schemaDirectory>
-							<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
-							<clearOutputDir>false</clearOutputDir>
-						</configuration>
-					</plugin>
+					<artifactId>jaxb2-maven-plugin</artifactId>
+					<version>1.6</version>
+					<executions>
+						<execution>
+							<id>xjc</id>
+							<goals>
+								<goal>xjc</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<schemaDirectory>${project.basedir}/src/main/xsd/</schemaDirectory>
+						<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+						<clearOutputDir>false</clearOutputDir>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
