--- a/Company/pom.xml
+++ b/Company/pom.xml
@@ -68,12 +68,22 @@
 			<artifactId>spring-ws-core</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.7</version>
+		</dependency>
 
 
 	</dependencies>
 
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
