--- a/Company/src/main/resources/application.properties
+++ b/Company/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/xmldb?useSSL=false&createDatabaseIfNotExist=true
 server.contextPath=/Firma
 spring.datasource.username = root
-spring.datasource.password = divovicgoran
+spring.datasource.password = 1100rh18
 #korisno ako je konekcija dugo u idle stanju
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
